--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node build/app.js",
-    "dev": "clear && nodemon src/app.ts"
+    "dev": "clear && nodemon src/app.ts",
+    "test": "ts-node src/app.ts"
   },
   "author": "TheReal_Infinite",
   "license": "ISC",
